--- a/login.html
+++ b/login.html
@@ -2,40 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/Login.css">
     <link rel="stylesheet" href="CSS/base.css">
-
-
     </head>
-  <body>
 
-  <header>
-    <ul>
-       <li>
-         <img src="LOGO" alt="">
-           </li>
-           <li>
-             <a href="#">Reglas del Juego</a>
-           </li>
-           <li>
-             <a href="#">Acerca de Nosotros</a>
-           </li>
-         </ul>
-
-  <div  class= login>
-    <ul>
-           <li>
-             <a href="#">Home</a>
-           </li>
-           <li>
-             <a href="#">Registro</a>
-           </li>
-         </ul>
-  </div>
+  <header class="main-header">
+    <nav>
+      <img src="img/Logo.png" alt="logotipo" class="logo">
+      <br>
+      <a href="#" class="barrita">
+        <img src="img/barrita lateral.png"></span>
+      </a>
+    </nav>
   </header>
 
-  <section>
+<body>
+
+
+<section  class="container">
+<div>
+
+</div>
+
+<div>
   <br>
   <br>
   <h1> BIENVENIDO</h1>
@@ -67,6 +59,12 @@
 </div>
 
   </form>
+
+</div>
+<div>
+
+</div>
+
   </div>
   </section>
 
