--- a/login2.html
+++ b/login2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Login</title>
     <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/Login2.css">
+    <link rel="stylesheet" href="CSS/login2.css">
     <link rel="stylesheet" href="CSS/base.css">
     </head>
 
@@ -50,11 +50,11 @@
   <p></p>
 
   <h5><strong>¿Olvidaste el nombre de usuario y contraseña?</strong></h5>
-  <h5>¿No tenes cuenta? <strong>Registrate</strong></h5>
+  <h5>¿No tenes cuenta? <strong>Regístrate</strong></h5>
 
 <div class="botones">
   <p class="botones">
-      <button class="button" type="button" name="button"> Registrar
+      <button class="button" type="button" name="button"> Regístrate
         </button>
   </p>
 </div>
