--- a/home Challenge.html
+++ b/home Challenge.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,35 +7,40 @@
     <title></title>
   </head>
   <body>
-    <div class="container">
+    <div class="">
       <header>
-        <nav>
-          <a href="#">
-            <img class="logo" src="IMG/logo.png" alt="logotipo">
-          </a>
-          <a href="#">
-            <img class="menu" src="IMG/barrita lateral.png" alt="barrita">
-          </a>
-          <nav class="desktop">
-            <a href="#">Home</a>
-            <a href="#">Acerca</a>
-            <a href="#">Challenge</a>
-            <a href="#">Registrate</a>
-            <p>  |  </p>
-            <a href="#">Inciar sesión</a>
+        <div class="container">
+          <nav>
+            <a href="#">
+              <img class="logo" src="IMG/logo.png" alt="logotipo">
+            </a>
+            <a href="#">
+              <img class="menu" src="IMG/barrita lateral.png" alt="barrita">
+            </a>
+            <nav class="desktop">
+              <a href="#">Home</a>
+              <a href="#">Acerca</a>
+              <a href="#">Challenge</a>
+              <a href="#">Registrate</a>
+              <p>  |  </p>
+              <a href="#">Inciar sesión</a>
+            </nav>
           </nav>
-        </nav>
+        </div>
+
       </header>
       <div class="centro">
-        <h1>
-          Poné a prueba tus conocimientos con "CHALLENGE"
-        </h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing.
-        </p>
-        <a class="btnjugar" href="#">jugar</a>
+        <div class="container">
+          <h1>
+            Poné a prueba tus conocimientos con "CHALLENGE"
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing.
+          </p>
+          <a class="btnjugar" href="#">jugar</a>
+        </div>
       </div>
-      <footer class="mobile">
+      <!--footer class="mobile">
         <div class="footer-menu">
           <a class="footer-item-menu" href="#">Trabajo</a>
           <a class="footer-item-menu" href="#">Desarrolladores</a>
@@ -49,53 +54,55 @@
           <a class="footer-item-menu" href="#">App movil</a>
         </div>
         <ul class="social-media">
-						<li><a href="#"><img src="IMG/facebook.png" alt=""></li>
-            <li><a href="#"><img src="IMG/twitter.png" alt=""></li>
-            <li><a href="#"><img src="IMG/instagram.png" alt=""></li>
+						<li><a href="#"><img src="IMG/facebook.png" alt=""></a></li>
+            <li><a href="#"><img src="IMG/twitter.png" alt=""></a></li>
+            <li><a href="#"><img src="IMG/instagram.png" alt=""></a></li>
         </ul>
         <div class="arg">
             <img src="IMG/arg.png" alt="">
         </div>
         <p>ARGENTINA</p>
         <p>(C) Challenge. Todos los derecgos reservados.</p>
-      </footer>
+      </footer-->
       <footer class="desktop">
-        <a href="###">
-          <img class="logo" src="IMG/logo.png" alt="logotipo">
-        </a>
-        <div class="">
-          <a class="footer-item-menu" href="#">Trabajo</a>
-          <a class="footer-item-menu" href="#">Desarrolladores</a>
-          <a class="footer-item-menu" href="#">Inversiones</a>
-          <a class="footer-item-menu" href="#">Publicidades</a>
-          <a class="footer-item-menu" href="#">Proveedores</a>
-        </div>
-        <div class="">
-          <a class="footer-item-menu" href="#">Trabajo</a>
-          <a class="footer-item-menu" href="#">Desarrolladores</a>
-          <a class="footer-item-menu" href="#">Inversiones</a>
-          <a class="footer-item-menu" href="#">Publicidades</a>
-          <a class="footer-item-menu" href="#">Proveedores</a>
-        </div>
-        <div class="">
-          <a class="footer-item-menu" href="#">Trabajo</a>
-          <a class="footer-item-menu" href="#">Desarrolladores</a>
-          <a class="footer-item-menu" href="#">Inversiones</a>
-          <a class="footer-item-menu" href="#">Publicidades</a>
-          <a class="footer-item-menu" href="#">Proveedores</a>
-        </div>
-        <ul class="social-media">
-						<li><a href="#"><img src="IMG/facebook.png" alt=""></li>
-            <li><a href="#"><img src="IMG/twitter.png" alt=""></li>
-            <li><a href="#"><img src="IMG/instagram.png" alt=""></li>
-        </ul>
-      </footer>
-      <footer class="desktop2">
-<br>
-        <p>(C) Challenge. Todos los derechos reservados.</p>
-        <p>ARGENTINA</p>
-        <div class="arg">
-            <img src="IMG/arg.png" alt="">
+        <div class="container">
+          <div class="footer-menu">
+            <a href="#">
+              <img class="logo" src="img/Logo.png" alt="logotipo">
+            </a>
+            <div class="">
+              <a class="footer-item-menu" href="#">sobre Nosotros</a>
+              <a class="footer-item-menu" href="#">Compañía</a>
+            </div>
+            <div class="">
+              <a class="footer-item-menu" href="#">Prensa</a>
+              <a class="footer-item-menu" href="#">Inversiones</a>
+              <a class="footer-item-menu" href="#">Trabajar con Nosotros</a>
+            </div>
+            <div class="">
+              <a class="footer-item-menu" href="#">Términos y Condiciones</a>
+              <a class="footer-item-menu" href="#">Política de Privacidad</a>
+            </div>
+            <ul class="social-media">
+                <li><a href="#"><img src="IMG/facebook.png" alt=""></a></li>
+                <li><a href="#"><img src="IMG/twitter.png" alt=""></a></li>
+                <li><a href="#"><img src="IMG/instagram.png" alt=""></a></li>
+            </ul>
+          </div>
+          <div class="footer-copyright">
+            <div class="copyright-left">
+              <p id="desktop2">(C) Challenge. Todos los derechos reservados.</p>
+            </div>
+            <div class="copyright-right">
+              <p>ARGENTINA</p>
+              <img src="IMG/arg.png" alt="">
+            </div>
+            <div class="social-media-mobile">
+                <a href="#"><img src="IMG/facebook.png" alt=""></a>
+                <a href="#"><img src="IMG/twitter.png" alt=""></a>
+                <a href="#"><img src="IMG/instagram.png" alt=""></a>
+            </div>
+          </div>
         </div>
       </footer>
     </div>
