con una sola css

--- a/login2.html
+++ b/login2.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Login</title>
     <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/login2.css">
-    <link rel="stylesheet" href="CSS/base.css">
+    <link rel="stylesheet" href="css/challenge.css">
     </head>
 
     <body>
-      <div class="container">
+      <div class="">
         <header>
-          <nav>
-            <a href="#">
-              <img class="logo" src="IMG/logo.png" alt="logotipo">
-            </a>
-            <a href="#">
-              <img class="menu" src="IMG/barrita lateral.png" alt="barrita">
-            </a>
-            <nav class="desktop">
-              <a href="#">Home</a>
-              <a href="#">Acerca</a>
-              <a href="#">Challenge</a>
-              <a href="#">Registrate</a>
-              <p>  |  </p>
-              <a href="#">Inciar sesión</a>
+          <div class="container">
+            <nav>
+              <a href="#">
+                <img class="logo" src="IMG/logo.png" alt="logotipo">
+              </a>
+              <a href="#">
+                <img class="menu" src="IMG/barrita lateral.png" alt="barrita">
+              </a>
+              <nav class="desktop">
+                <a href="index.html">Home</a>
+                <a href="#">Acerca</a>
+                <a href="#">Challenge</a>
+                <a href="reg.html">Registrate</a>
+                <p>  |  </p>
+                <a href="login2.html">Inciar sesión</a>
+              </nav>
             </nav>
-          </nav>
+          </div>
         </header>
 <section>
-<div class="social-media">
-  <ul class="social-media">
-    <li class="social-media"><a class="social-media" href="#"><strog>Iniciar sesión con Facebook</strong></a></li>
-    </ul>
-
-</div>
+  <div class="botones-facebook">
+    <p class="botones">
+        <button class="button-facebook" type="button" name="button">INICIAR SESIÓN CON FACEBOOK
+          </button>
 
 <div class= principal>
-  <br>
   <h5> o iniciar con E-mail </h5>
   <div class="principal">
    <form class="registro" action="index.html" method="post"><br><br>
@@ -54,7 +52,7 @@
 
 <div class="botones">
   <p class="botones">
-      <button class="button" type="button" name="button"> Regístrate
+      <button class="button" type="button" name="button"> REGISTRATE
         </button>
   </p>
 </div>
@@ -65,9 +63,8 @@
 <p class="fin"> Si haces clic en <a class="fin" href="#">“Acceder con Facebook”</a> y no eres usuario de Challenge, quedarás registrado y aceptaras los <strong><a class="fin" href="#">Términos y Condiciones</a></strong> y la <strong><a class="fin" href="#">Política de Privacidad de Challenge</a></strong>.
 </p>
 </div>
-
-</div>
-</section>
-    </div>
+  </div>
+  </section>
+  </div>
   </body>
 </html>
