--- a/reg.html
+++ b/reg.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Registracion</title>
     <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/login2.css">
-    <link rel="stylesheet" href="CSS/base.css">
-    <link rel="stylesheet" href="CSS/reg.css">
+    <link rel="stylesheet" href="css/challenge.css">
     </head>
 
     <body>
-      <div class="container">
+      <div class="">
         <header>
-          <nav>
-            <a href="#">
-              <img class="logo" src="IMG/logo.png" alt="logotipo">
-            </a>
-            <a href="#">
-              <img class="menu" src="IMG/barrita lateral.png" alt="barrita">
-            </a>
-            <nav class="desktop">
-              <a href="#">Home</a>
-              <a href="#">Acerca</a>
-              <a href="#">Challenge</a>
-              <a href="#">Registrate</a>
-              <p>  |  </p>
-              <a href="#">Inciar sesión</a>
+          <div class="container">
+            <nav>
+              <a href="#">
+                <img class="logo" src="IMG/logo.png" alt="logotipo">
+              </a>
+              <a href="#">
+                <img class="menu" src="IMG/barrita lateral.png" alt="barrita">
+              </a>
+              <nav class="desktop">
+                <a href="index.html">Home</a>
+                <a href="#">Acerca</a>
+                <a href="#">Challenge</a>
+                <a href="reg.html">Registrate</a>
+                <p>  |  </p>
+                <a href="login2.html">Inciar sesión</a>
+              </nav>
             </nav>
-          </nav>
+          </div>
         </header>
 <section>
-<div class="social-media">
-  <ul class="social-media">
-    <li class="social-media"><a class="social-media" href="#"><strog>Iniciar sesión con Facebook</strong></a></li>
-    </ul>
-
-</div>
+  <div class="botones-facebook">
+    <p class="botones">
+        <button class="button-facebook" type="button" name="button">INICIAR SESIÓN CON FACEBOOK
+          </button>
 
 <div class= principal>
   <h5> o registrate con tu E-mail </h5>
